# murfy-cover-app

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  .python.env  AGENTS.md  CLAUDE.md  Dockerfile  README_CARTES.md  RESUME_FINAL.md  Taskfile.yml  __appsignal__.py  activation.Dockerfile  activation.conda-env.yaml  bmw.Dockerfile  conda-env.yaml  conda-lock.yaml  config_trendlines.py  docker-compose.yaml  hm.Dockerfile  ingestion.conda-env.yaml  ingestion.conda-lock.yaml  mobilisights.Dockerfile  okta_token_generator.py  pyproject.toml  readme.md  redis-acl.conf  redis.conf  setup.py  start.sh  start_bmw.sh  start_hm.sh  start_mobilisights.sh  start_tesla.sh  start_tesla_fleet_telemetry.sh  start_transform.sh  tesla.Dockerfile  transform.Dockerfile
.github/workflows/: frontend-tests.yml  python-tests.yml  test.yml
certs/: README.md  bib-prod-rdb-data-ev.pem
dagster_home/: .gitignore
docker/: Dockerfile  activation.Dockerfile  bmw.Dockerfile  dagster.Dockerfile  data_catalog.Dockerfile  data_ev.Dockerfile  ev_database.Dockerfile  external_api.Dockerfile  hm.Dockerfile  mobilisights.Dockerfile  premium_report.Dockerfile  push_ingestion.Dockerfile  results.Dockerfile  scraping_soh.Dockerfile  spark.Dockerfile  tesla.Dockerfile  transform.Dockerfile  webapp.Dockerfile
frontend/: .dockerignore  .env.dist  .gitignore  .lintstagedrc.mjs  Dockerfile  README.md  build.sh  components.json  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs
frontend/src/: routes.ts
k8s/: act_activating_vehicles.yaml  com_compressing_bmw.yaml  com_compressing_ford.yaml  com_compressing_kia.yaml  com_compressing_mercedes_benz.yaml  com_compressing_renault.yaml  com_compressing_stellantis.yaml  com_compressing_tesla_fleet_telemetry.yaml  com_compressing_volkswagen.yaml  com_compressing_volvo.yaml  enr_adding_results.yaml  ing_fetching_ev_database.yaml  ing_ms.yaml  ing_scraping_marketplaces.yaml  ing_tesla.yaml  ns_data_engineering.yaml  results.yaml  soh_scraping.yaml  valkey.yaml
k8s/_templates/: kc-oem-iceberg.tpl.yaml
k8s/bib-data.fr/: bib-data-public-key.yaml
k8s/config/: results_config.yaml  scraping_soh_config.yaml
k8s/configmap/: spark-log4j-config.yaml
k8s/cronjob/: act_activating_tesla_individual.yaml  act_activating_vehicles.yaml  com_compressing_bmw.yaml  com_compressing_ford.yaml  com_compressing_kia.yaml  com_compressing_mercedes_benz.yaml  com_compressing_renault.yaml  com_compressing_stellantis.yaml  com_compressing_tesla_fleet_telemetry.yaml  com_compressing_volkswagen.yaml  com_compressing_volvo.yaml  ing_fetching_ev_database.yaml  ing_scraping_marketplaces.yaml  res_generating_reports.yaml
k8s/deployment/: bastion.yaml  gotenberg.yaml  ing_api_push.yaml  ing_hm.yaml  ing_hm_mqtt.yaml  ing_ms.yaml  ing_tesla.yaml  res_celery_scraper.yaml  spark_history_server.yaml  tesla_vehicle_command.yaml  valkey.yaml  viz_data_catalog.yaml
k8s/get-evalue.com/: prod-evalue-back-secret.yaml  prod-evalue-back.yaml  prod-evalue-certs.yaml  prod-evalue-front.yaml  secret-store.yaml
k8s/job/: enr_adding_results.yaml
k8s/kafka-connector/: kc-oem-iceberg.yaml  kc-tesla.yaml
k8s/secret/: appsignal_secret.yaml  bmw_secret.yaml  cluster-secret-store.yaml  db_data_eng_secret.yaml  db_data_ev_secret.yaml  db_encryption_secret.yaml  ev_database_secret.yaml  external-secrets-results.yaml  external-secrets-scraping-soh.yaml  get_ev_account_secret.yaml  google_secret.yaml  hm_mqtt_secret.yaml  hm_secret.yaml  kia_secret.yaml  mobilisight_secret.yaml  renault_secret.yaml  results_secret.yaml  s3_secret.yaml  s3_secret_dev.yaml  scraping_soh_secret.yaml  secret-store.yaml  slack_secret.yaml  smtp_secret.yaml  tesla_secret.yaml  tesla_vehicle_command_secret.yaml  volkswagen_secret.yaml
k8s/spark_application/: tra_processed_phases_all.yaml  tra_processed_phases_tesla.yaml  tra_raw_ts_all.yaml  tra_result_phases_all.yaml  tra_result_phases_tesla.yaml
scripts/: generate-oem-connectors.sh
src/: app.py  jobs.py  main.py  matplotlib_plt_time_series.py  plt_plotly_time_series.py  plt_tesla_ts.py  processed_tesla_ts.py  processed_watea_ts.py  raw_tesla_ts.py  raw_watea_ts.py  tesla_perfs.py  watea_constants.py  watea_fleet_info.py  watea_perfs.py
src/activation/: Activation.py  Readme.md  fleet_info.py  main.py  vehicle_command.py
src/bib_dagster/: config.py  slack_utils.py
src/core/: __init__.py  argparse_utils.py  caching_utils.py  compressor.py  config.py  console_utils.py  constant_variables.py  constants.py  delete_cache.py  encrypt_utils.py  env_utils.py  ev_models_info.py  gdrive_utils.py  gsheet_utils.py  logging_utils.py  numpy_utils.py  pandas_utils.py  parse_HighMobility_response.py  perf_agg_processing.py  plt_utils.py  readme.md  response_to_raw.py  s3_utils.py  singleton_s3_bucket.py  slack_utils.py  spark_utils.py  sql_utils.py  stats_utils.py  time_series_processing.py  time_utils.py  timer_utils.py  trendlines_utils.py  typing_utils.py  wmi_to_oem.py
src/db_models/: __init__.py  alembic.ini  api.py  base_uuid_model.py  company.py  enums.py  files.py  fleet.py  report.py  user.py  user_tokens.py  vehicle.py
src/external_api/: README.md  __init__.py  app.py  main.py
src/high_mobility/: high_mobility_constants.py  high_mobility_processed_ts.py  high_mobility_raw_ts.py  high_mobility_response_parsing.py  parse_HighMobility_response.py  response_to_raw_parquet.py
src/ingestion/: __init__.py  compress_high_mobility_data.py  conversion_utils.py  high_mobility_api.py  high_mobility_ingester.py  ingest.py  ingestion_cache.py  kafka_producer.py
src/jobs/: base_job.py  merge_prod_and_dev_s3_buckets.py
src/legacy_code/: constants_variables.py  download_raw_api_time_time_series.py  fleet_vehicles_info.py  linkbycar_utils.py  process_bmw_from_link_by_car.py  process_raw_linkbycar_ts.py  process_tesla_from_linkbycar.py  readme.md
src/load/: update_scoring.py
src/reports/: main.py  (+7 more)
tests/: README.md  conftest.py
web/: Dockerfile  deploy_fapi.sh  docker-compose.yml  requirements.txt
(+1255 files in other folders)
