[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murfy-map-generator"
version = "1.0.0"
description = "Mag cover generator for Murfy"
readme = "readme.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core dependencies used across all modules
    "python-dotenv>=1.0.0",
    "pandas>=2.2.2", # Adds 150MB to images, might be worth to install only in needed modules
    "msgspec>=0.19.0",
    "schedule>=1.2.2",
    "rich>=13.5.2",
    "requests>=2.30.0",
    "redis>=6.0.0",
    "aiohttp>=3.11.11",
    "aioboto3>=15.5.0",
    "types-aioboto3[s3]>=15.5.0",
    "boto3>=1.36",
    "joblib>=1.5.2",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.11",
    "pydantic-settings>=2.11",
    "pydantic[email]>=2.11",
    "click>=8.1.7",
    "cryptography>=46.0.3",
    "appsignal>=1.6.1",
]

[project.optional-dependencies]
# Activation module dependencies - handles vehicle API communication
map-generator = [
    "geopandas",
    "matplotlib",
    "streamlit"
]


[dependency-groups]
# Full development environment with all dependencies
dev = [
    "murfy-map-generator[map-generator]",
    "pytest",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.25.0",
    "ruff",
    "ty>=0.0.6",
    "nbstripout",
    "fakeredis>=2.31.3",
    "py-spy>=0.4.1",
    "ipykernel",
    "polyfactory>=3.2.0",
    "scikit-learn>=1.5.1",
]

local = ["pyspark>=4.0.1", "jupyterlab"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "bib_dagster"
registry_modules = [
    "bib_dagster.components.*",
]


[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["*.ipynb", "*.csv"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "B9",
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]

ignore = [
    # only relevant if you run a script with `python -0`,
    # which seems unlikely for any of the scripts in this repo
    "B011",
    # B008: Do not perform function call in argument defaults
    # Disabled for FastAPI Depends() which is designed to work this way
    "B008",
    # Leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["core", "activation", "transform", "eda", "load", "web", "results", "external_api", "visualization"]

[tool.pytest.ini_options]
testpaths = ["tests"]
#pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--import-mode=importlib",
    "-m", "not integration",  # Skip integration tests by default
]
markers = [
    "asyncio: mark test as async",
    "gotenberg: mark test as requiring a Gotenberg PDF service",
    "integration: mark test as integration test (requires external APIs, database, S3, etc.)",
    "unit: mark test as unit test (self-sufficient, no external dependencies)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
relative_files = true
